# java-libkiwix

./: .codecov.yml  .gitignore  CHANGELOG  README.md  build.gradle  build.sh  checkstyle.xml  install_deps.sh  jacoco.gradle  local.properties  settings.gradle
.contrib/: build.sh
.github/: pull_request.yml  release.yml
.github/workflows/: cd.yml  ci.yml  publish.yml  publish_snapshot.yml  pull_request.yml  release.yml
android-kiwix-lib-publisher/: build.gradle
android-kiwix-lib-publisher/kiwixLibAndroid/: build.gradle  publish.gradle
android-kiwix-lib-publisher/kiwixLibAndroid/src/main/: AndroidManifest.xml
android-kiwix-lib-publisher/kiwixLibAndroid/src/main/jniLibs/arm64-v8a/: libkiwix.so.REMOVED.git-id
android-kiwix-lib-publisher/kiwixLibAndroid/src/main/jniLibs/armeabi-v7a/: libkiwix.so.REMOVED.git-id
android-kiwix-lib-publisher/kiwixLibAndroid/src/main/jniLibs/x86/: libkiwix.so.REMOVED.git-id
android-kiwix-lib-publisher/kiwixLibAndroid/src/main/jniLibs/x86_64/: libkiwix.so.REMOVED.git-id
android-libkiwixbuild/: build.gradle  settings.gradle
android-libkiwixbuild/app/: build.gradle
android-libkiwixbuild/app/src/androidTests/java/org/kiwix/kiwixlib/: CMakeLists.txt  compile_and_run_test.sh  create_test_zimfiles  small.zim  small.zim.embedded  test.java
android-libkiwixbuild/app/src/main/: AndroidManifest.xml
android-libkiwixbuild/app/src/main/cpp/: CMakeLists.txt  base64.cpp  filter.cpp  kiwixicu.cpp  kiwixreader.cpp  kiwixsearcher.cpp  kiwixserver.cpp  library.cpp  manager.cpp  org_kiwix_kiwixlib_Book.h  org_kiwix_kiwixlib_Filter.h  org_kiwix_kiwixlib_JNIICU.h  org_kiwix_kiwixlib_JNIKiwixReader.h  org_kiwix_kiwixlib_JNIKiwixSearcher.h  org_kiwix_kiwixlib_JNIKiwixSearcher_Result.h  org_kiwix_kiwixlib_JNIKiwixServer.h  org_kiwix_kiwixlib_Library.h  org_kiwix_kiwixlib_Manager.h
android-libkiwixbuild/app/src/main/cpp/include/: kiwix.h  searcher.h  utils.h
android-libkiwixbuild/app/src/main/cpp/include/src/__support/: CMakeLists.txt
android-libkiwixbuild/app/src/main/cpp/include/src/__support/CPP/: CMakeLists.txt  limits.h
android-libkiwixbuild/app/src/main/cpp/include/src/__support/FPUtil/: CMakeLists.txt
android-libkiwixbuild/app/src/main/cpp/include/src/__support/FPUtil/generic/: CMakeLists.txt
android-libkiwixbuild/app/src/main/cpp/include/src/__support/File/: CMakeLists.txt
android-libkiwixbuild/app/src/main/cpp/include/src/__support/OSUtil/: CMakeLists.txt
android-libkiwixbuild/app/src/main/cpp/include/src/__support/OSUtil/linux/: CMakeLists.txt
android-libkiwixbuild/app/src/main/cpp/include/src/__support/OSUtil/linux/aarch64/: CMakeLists.txt
android-libkiwixbuild/app/src/main/cpp/include/src/__support/OSUtil/linux/arm/: CMakeLists.txt
android-libkiwixbuild/app/src/main/cpp/include/src/__support/OSUtil/linux/x86_64/: CMakeLists.txt
android-libkiwixbuild/app/src/main/cpp/include/src/__support/threads/: CMakeLists.txt
android-libkiwixbuild/app/src/main/cpp/include/src/__support/threads/linux/: CMakeLists.txt
android-libkiwixbuild/app/src/main/cpp/include/unicode/: platform.h  umachine.h  urename.h  uversion.h
android-libkiwixbuild/app/src/main/cpp/include/utils/: base64.h
android-libkiwixbuild/app/src/main/cpp/include/zim/: tools.cpp  tools.h  zim.h  zim_config.h
android-libkiwixbuild/app/src/main/jniLibs/arm64-v8a/: libkiwix.so.REMOVED.git-id  libzim.so.REMOVED.git-id
android-libkiwixbuild/app/src/main/jniLibs/arm64-v8a/libkiwix/: libkiwix.so.REMOVED.git-id
android-libkiwixbuild/app/src/main/jniLibs/armeabi-v7a/: libkiwix.so.REMOVED.git-id  libzim.so.REMOVED.git-id
android-libkiwixbuild/app/src/main/jniLibs/x86/: libkiwix.so.REMOVED.git-id  libzim.so.REMOVED.git-id
android-libkiwixbuild/app/src/main/jniLibs/x86_64/: libkiwix.so.REMOVED.git-id  libzim.so.REMOVED.git-id
android-libkiwixbuild/app/src/main/res/layout/: activity_main.xml
android-libkiwixbuild/app/src/main/res/values/: strings.xml  themes.xml
android-libkiwixbuild/app/src/main/res/values-night/: themes.xml
android-libkiwixbuild/gradle/wrapper/: gradle-wrapper.properties
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
contrib/: build.sh  compile.sh
gradle/wrapper/: gradle-wrapper.properties
kiwixLibAndroid/: build.gradle
kiwixLibAndroid/src/main/cpp/: CMakeLists.txt  book.cpp  kiwixicu.cpp  kiwixreader.cpp  kiwixsearcher.cpp  kiwixserver.cpp  library.cpp  manager.cpp
kiwixlib/: build.gradle
lib/: build.gradle  publish.gradle
lib/src/main/: AndroidManifest.xml  publish.gradle
lib/src/main/cpp/: CMakeLists.txt  book.cpp  common.cpp  filter.cpp  kiwixicu.cpp  kiwixserver.cpp  library.cpp  macros.h  manager.cpp  utils.h  wrapper.cpp
lib/src/main/cpp/libkiwix/: book.cpp  bookmark.cpp  filter.cpp  illustration.cpp  kiwixicu.cpp  kiwixserver.cpp  library.cpp  manager.cpp  spellingdb.cpp
lib/src/main/cpp/libzim/: archive.cpp  blob.cpp  entry.cpp  entry_iterator.cpp  item.cpp  query.cpp  search.cpp  search_iterator.cpp  searcher.cpp  suggestion_item.cpp  suggestion_iterator.cpp  suggestion_search.cpp  suggestion_searcher.cpp
lib/src/main/java/org/kiwix/: IterWrapper.java  Wrapper.java
lib/src/main/java/org/kiwix/libzim/: Blob.java  (+19 more)
lib/src/test/: CMakeLists.txt  catalog.xml  compile_and_run_test.sh  create_test_zimfiles  library.xml  run_test.sh  small.zim  small.zim.embedded  test.java
lib/src/test/org/kiwix/test/libkiwix/: TestBook.java  TestBookmark.java  TestIllustration.java  TestJNIICU.java  TestLibrary.java  TestManager.java  TestServer.java  TestSpellingsDB.java
lib/src/test/org/kiwix/test/libzim/: TestArchive.java  TestBlob.java  TestEntry.java  TestEntryIterator.java  TestItem.java  TestQuery.java  TestSearch.java  TestSearchIterator.java  TestSearcher.java  TestSuggestionItem.java  TestSuggestionIterator.java  TestSuggestionSearch.java  TestSuggestionSearcher.java
lib/src/test/small_zimfile_data/: main.html
src/wrapper/java/: kiwixreader.cpp
(+57 files in other folders)
